Fixup API spec, phone number field names.
